--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,14 @@ Module.symvers
 Mkfile.old
 dkms.conf
 alunos.txt
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+!*.code-workspace
+
+# Built Visual Studio Code Extensions
+*.vsix
