--- a/.gitignore
+++ b/.gitignore
@@ -87,12 +87,12 @@ dkms.conf
 alunos.txt
 
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
-!*.code-workspace
+#!.vscode/settings.json
+#!.vscode/tasks.json
+#!.vscode/launch.json
+#!.vscode/extensions.json
+#!.vscode/*.code-snippets
+#*.code-workspace
 
 # Built Visual Studio Code Extensions
 *.vsix
